# ArkAnalyzer-HapRay

./: .dockerignore  .env.example  .gitattributes  .gitignore  .mailmap  .npmrc  README.md  activate.bat  activate.sh  bootstrap_env.bat  bootstrap_env.ps1  bootstrap_env.sh  package.json  package.py  package_linux.spec  package_windows.spec  setup-offline.sh  setup.sh  setup_darwin_arm64.sh
desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json
desktop/src-tauri/.cargo/: config.toml
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: cli.rs  commands.rs  lib.rs  main.rs  plugins.rs
perf_testing/: .pylintrc  config.yaml  copy_dist.js  main.py  main.spec  opt.bat  package.json  package_linux.spec  plugin.json  pyproject.toml  pytest.ini  requirements.txt  setup.js  setup_env.py  test.py  testcase.txt  tox.ini  webpack-entry.js  webpack.config.js  zip.js
perf_testing/aw/: PerfTestCase.py  Utils.py  dynamic_script.py
perf_testing/aw/common/: CommonUtils.py
perf_testing/docs/: ARCHITECTURE.md  events_to_hypium.py  hapray_script_api.md
perf_testing/hapray/: __init__.py
perf_testing/hapray/actions/: compare_action.py  convert_action.py  gui_agent_action.py  haptest_action.py  hilog_action.py  opt_action.py  perf_action.py  prepare_action.py  root_cause_action.py  static_action.py  ui_action.py  ui_compare_action.py  update_action.py
perf_testing/hapray/analyze/: __init__.py  base_analyzer.py  cold_start_analyzer.py  component_reusable_analyzer.py  cov_analyzer.py  empty_frame_analyzer.py  fault_tree_analyzer.py  frame_drop_analyzer.py  frame_load_analyzer.py  gc_analyzer.py  ipc_binder_analyzer.py  memory_analyzer.py  perf_analyzer.py  symbol_statistic_analyzer.py  thread_analyzer.py  thread_optimization.py  ui_analyzer.py  ui_animate_analyzer.py  unified_frame_analyzer.py  v_sync_anomaly_analyzer.py
perf_testing/hapray/core/: capture_ui.py  command_builder.py  command_templates.py  data_collector.py  data_transfer.py  perf_testcase.py  process_manager.py  report.py  ui_event_wrapper.py  xvm.py
perf_testing/hapray/gui_agent/: __init__.py  gui_agent.py
perf_testing/hapray/haptest/: DEBUG.md  HAPTEST_INTRODUCTION.md  LOGGING.md  QUICKSTART.md  README.md  USAGE.md  __init__.py  haptest_case.py  llm_state_comparator.py  llm_strategy.py  state_manager.py  strategy.py
perf_testing/hapray/mode/: mode.py  simple_mode.py
perf_testing/hapray/optimization_detector/: file_info.py  invoke_symbols.py  lto_detector.py  optimization_detector.py
perf_testing/hapray/ui_detector/: arkui_tree_parser.py  image_comparator.py  image_size_analyzer.py  ui_tree_comparator.py
perf_testing/scripts/: copy-testcases-to-dist.mjs  main.py  patch_phone_agent_device.py
perf_testing/testcases/: Example.py  config.yaml
perf_testing/testcases/com.alipay.mobile.client/: PerformanceDynamic_com_alipay_mobile_client_0010.json  PerformanceDynamic_com_alipay_mobile_client_0010.py  PerformanceDynamic_com_alipay_mobile_client_0020.json  PerformanceDynamic_com_alipay_mobile_client_0020.py  PerformanceDynamic_com_alipay_mobile_client_0060.json  PerformanceDynamic_com_alipay_mobile_client_0060.py  PerformanceDynamic_com_alipay_mobile_client_0070.json  PerformanceDynamic_com_alipay_mobile_client_0070.py  ResourceUsage_PerformanceDynamic_zhifubao_0010.py  ResourceUsage_PerformanceDynamic_zhifubao_0020.py  ResourceUsage_PerformanceDynamic_zhifubao_0060.py  ResourceUsage_PerformanceDynamic_zhifubao_0070.py
perf_testing/testcases/com.example.wsywechat/: PerformanceDynamic_com_example_wsywechat_0010.py  config.yaml
perf_testing/testcases/com.jd.hm.mall/: PerformanceDynamic_com_jd_hm_mall_0010.json  PerformanceDynamic_com_jd_hm_mall_0010.py  ResourceUsage_PerformanceDynamic_jingdong_0010.py  ResourceUsage_PerformanceDynamic_jingdong_0020.py
perf_testing/testcases/com.ss.hm.ugc.aweme/: PerformanceDynamic_com_ss_hm_ugc_aweme_0010.json  PerformanceDynamic_com_ss_hm_ugc_aweme_0010.py  ResourceUsage_PerformanceDynamic_Douyin_0010.json  ResourceUsage_PerformanceDynamic_Douyin_0010.py  ResourceUsage_PerformanceDynamic_Douyin_0030.py  ResourceUsage_PerformanceDynamic_Douyin_0040.py  ResourceUsage_PerformanceDynamic_Douyin_0060.py  ResourceUsage_PerformanceDynamic_Douyin_0080.py  ResourceUsage_PerformanceDynamic_Douyin_0090.py  ResourceUsage_PerformanceDynamic_Douyin_0110.py  ResourceUsage_PerformanceDynamic_Douyin_0140.py
perf_testing/testcases/com.xingin.xhs_hos/: ResourceUsage_PerformanceDynamic_xhs_0060.py
perf_testing/testcases/yylx.danmaku.bili/: ResourceUsage_PerformanceDynamic_bilibili_0020.py
perf_testing/tests/: test_contract_cli_smoke.py  test_hapray_tool_result_contract.py  test_performance.py  test_suite-default-unsigned.hsp
tools/optimization_detector/: .gitignore  MANIFEST.in  README.md  build.sh  build_exe.sh  cli.py  optimization_detector.spec  package.json  plugin.json  pyproject.toml  requirements.txt  setup.py  setup_env.py  tox.ini  webpack-entry.js  webpack.config.js
tools/optimization_detector/optimization_detector/: __init__.py  api.py  cli.py  errors.py  excel_utils.py  file_info.py  hap_parser.py  invoke_symbols.py  lto_detector.py  lto_feature_pipeline.py  machine_output.py  optimization_detector.py  report_formatters.py  resource_index_parser.py
tools/symbol_recovery/: .env.example  .gitignore  ANALYSIS_FLOW.md  ANALYSIS_REPORT_libquick.md  CALL_STACK_VS_CALL_STATISTICS.md  CONTEXT_INFORMATION_GUIDE.md  EXCEL_OFFSET_VERIFICATION_REPORT.md  HAP_ADDRESS_GUIDE.md  HAP_ADDRESS_INTEGRATION.md  HAP_ADDRESS_RESOLVER_README.md  MEMORY_MODE_USAGE.md  PERFDB_QUERY_OPTIMIZATION.md  RADARE2_USAGE.md  README.md  STRING_EXTRACTION_LIMITATIONS.md  SYMBOL_MATCHING_TECHNICAL_REPORT.md  diagnose_performance_analysis.py  main.py  package.json  plugin.json  pyproject.toml  requirements.txt  setup_env.py  symbol_recovery.spec  tox.ini  webpack.config.js
tools/symbol_recovery/analyzers/: __init__.py  event_analyzer.py  excel_analyzer.py  perf_analyzer.py  r2_analyzer.py
tools/symbol_recovery/llm/: __init__.py  (+3 more)
(+1109 files in other folders)
