[package]
name = "arkanalyzer-hapray"
version = "1.5.0"
description = "a tool designed for performance analysis of OpenHarmony applications."
authors = ["sunbo"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# 功能开关：默认包含桌面 GUI；在只需要 CLI（例如某些 Linux 发行版）时可关闭默认特性。
[features]
default = ["desktop"]
# 桌面 GUI，对应 Tauri 相关依赖
desktop = ["tauri", "tauri-plugin-opener", "tauri-plugin-dialog", "tauri-plugin-os", "tauri-plugin-decorum"]
# 仅 CLI 模式，占位 feature，方便在命令行显式区分
cli-only = []

# 可执行文件名保持 ArkAnalyzer-HapRay（与 build/zip 脚本一致）；deb 包名由 tauri identifier 决定
[[bin]]
name = "ArkAnalyzer-HapRay"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [], optional = true }
indexmap = { version = "2", features = ["serde"] }
tauri-plugin-opener = { version = "2", optional = true }
tauri-plugin-dialog = { version = "2", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-os = { version = "2", optional = true }
chrono = "0.4"
tauri-plugin-decorum = { version = "1.1.1", optional = true }
dirs = "5"

