[package]
name = "arkanalyzer-hapray"
version = "1.5.1"
description = "a tool designed for performance analysis of OpenHarmony applications."
authors = ["sunbo"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# 可执行文件名保持 ArkAnalyzer-HapRay（与 build/zip 脚本一致）；deb 包名由 tauri identifier 决定
[[bin]]
name = "ArkAnalyzer-HapRay"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
indexmap = { version = "2", features = ["serde"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-os = "2"
chrono = "0.4"
tauri-plugin-decorum = "1.1.1"
dirs = "5"
regex = "1"

# 减小 release 产物体积（影响 DMG / 各平台安装包内的主程序）
[profile.release]
strip = true
lto = "thin"
codegen-units = 1

