[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "optimization-detector"
version = "1.0.0"
description = "二进制文件优化级别和LTO检测工具"
authors = [
    { name = "Huawei Device Co., Ltd." }
]
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Hardware",
]

dependencies = [
    "numpy>=2.0",
    "pandas>=2.0.3",
    "tensorflow>=2.20.0",
    "tqdm>=4.67.1",
    "pyelftools>=0.32",
    "arpy~=2.3.0",
    "joblib>=1.3.0",
    "xlsxwriter>=3.0.0",
    "scikit-learn>=1.6.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "tox>=4.0.0",
    "pyinstaller==6.13.0"
]

[project.scripts]
opt-detector = "optimization_detector.cli:main"

[project.urls]
Homepage = "https://gitcode.com/SMAT/ArkAnalyzer-HapRay"

[tool.setuptools.packages.find]
where = ["."]
include = ["optimization_detector*"]

[tool.setuptools.package-data]
optimization_detector = [
    "models/*.h5",
    "models/**/*.joblib",
    "models/**/*.json",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # Pycodestyle 错误
    "F",   # Pyflakes
    "W",   # Pycodestyle 警告
    "C90", # 唐纳德·克努特复杂度
    "B",   # flake8-bugbear
    "PL",  # Pylint 规则
    "PT",  # Pytest 风格检查
    "RET", # return 语句检查
    "SIM", # 简化检查
    "I",   # isort (导入排序)
    "UP",  # pyupgrade
    "N",   # PEP8 命名约定 (pep8-naming)
]

ignore = [
    "E501",  # 行过长 (通常由格式化工具处理)
    "PLR0913", # 太多参数 (Pylint 的 R0913)
    "PLW0603", # 全局变量使用 (Pylint 的 W0603)
    "PLR0911", # Too many return statements
    "PLR0912", # Too many branches
    "PLR0915",
    "PLR2004",
    "N801",
    "N806", # Variable should be lowercase
    "C901",
    "UP007", # 禁用 Optional 到 | 的转换
    "UP045"
]

# 排除的文件/目录
exclude = [
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.format]
quote-style = "single"

# PEP8 命名约定配置
[tool.ruff.lint.pep8-naming]
# 忽略的名称模式 (使用正则表达式)
ignore-names = [
    "setUp",
    "tearDown",
    "setUpClass",
    "tearDownClass",
    "setUpModule",
    "tearDownModule",
    "assertRaisesRegex",
    "assertWarnsRegex"
]

# 函数参数数量最大限制
[tool.ruff.lint.pylint]
max-args = 5
max-branches = 12
max-statements = 50
max-returns = 6

# 函数复杂度限制
[tool.ruff.lint.mccabe]
max-complexity = 10

# 每文件忽略的错误上限
[tool.ruff.lint.per-file-ignores]
"test_*.py" = ["PLR2004", "S101"] # 测试文件中忽略魔术值和使用断言
"__init__.py" = ["F401"] # __init__.py 中允许未使用的导入

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

